# pbpic

./: .gitignore  CMakeLists.txt  README  README.md  myquote  myquote.html  spect_plot.pro
2d_pic/: makefile  pic2d.f90
python/: analysis_jdote.py
src/modules/: CMakeLists.txt
src/programs/: CMakeLists.txt  pic2d.f90
